# synthetic_data_generation

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
SynDataGenYOLO/: data_generation.py  extract_to_yolo.py  show_images_with_bboxes.py
SynDataGenYOLO/cli/: data_generation_cli.py  dataset_mixer_cli.py  extract_cli.py  extract_labelme_from_folder_cli.py  extract_to_yolo_cli.py  main.py  show_images_with_bboxes_cli.py
SynDataGenYOLO/data/: default_augmentation.yml
SynDataGenYOLO/utils/: blending.py  data_gen.py  modes.py
demo/: demo.py  pyproject.toml
demo/demo_data/foregrounds/: Tardigrade_010.json  Tardigrade_011_0001.json  Tardigrade_011_0035.json  Tardigrade_01_0002.json  Tardigrade_01_0004.json  Tardigrade_02.json  Tardigrade_Glocken_01.json
synthetic_data_gen/: data_generation.py  dataset_mixer.py  extract.py  extract_labelme_from_folder.py  show_images_with_bboxes.py  transform.yml
synthetic_data_gen/cli/: data_generation_cli.py  dataset_mixer_cli.py  extract_cli.py  extract_labelme_from_folder_cli.py  extract_to_yolo_cli.py  show_images_with_bboxes_cli.py
synthetic_data_gen/utils/: blending.py  modes.py
test_data/backgrounds_with_bboxes/labels/: Tardigrade_01_0002.txt
test_data/clean/labels/: 2-Egg-preggo-tardigrade-mama-under-the-microscope-at-100x-mag-Freckledscience_0001-0_jpeg.rf.2086789f793ad37f99a49a1dd62b3242.txt
test_data/foregrounds/: Tardigrade_01_0002.json  green_ball.json  red_ball.json
